added real slider

--- a/templates/player.html
+++ b/templates/player.html
@@ -1,9 +1,5 @@
 <audio hidden src="data/hellmarch.mp3">
 </audio>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-	  <span class="sr-only">0% Complete</span>
-  </div>
-</div>
+<div class="slider"></div><br/>
 <button class="glyphicon glyphicon-play btn btn-success playButton"></button>
 <button class="glyphicon glyphicon-pause btn btn-info pauseButton"></button>
