--- a/templates/player.html
+++ b/templates/player.html
@@ -1,5 +1,7 @@
 <audio hidden src="data/hellmarch.mp3">
 </audio>
-<div class="slider"></div><br/>
+<div class="slider">
+	<canvas></canvas>
+</div><br/>
 <button class="glyphicon glyphicon-play btn btn-success playButton"></button>
 <button class="glyphicon glyphicon-pause btn btn-info pauseButton"></button>
