--- a/templates/player.html
+++ b/templates/player.html
@@ -1,7 +1,11 @@
-<audio hidden src="data/hellmarch.mp3">
+<audio hidden src="">
 </audio>
-<div class="slider">
+<div class="sliderContainer">
+	<div class="slider">
+	</div>
 	<canvas></canvas>
-</div><br/>
-<button class="glyphicon glyphicon-play btn btn-success playButton"></button>
-<button class="glyphicon glyphicon-pause btn btn-info pauseButton"></button>
+</div>
+<br/>
+<a class="glyphicon glyphicon-play btn btn-success playButton"></a>
+<a class="glyphicon glyphicon-pause btn btn-info pauseButton"></a>
+<a class="glyphicon glyphicon-stop btn btn-danger stopButton"></a>
