--- a/templates/disconnect.html
+++ b/templates/disconnect.html
@@ -1,2 +1,2 @@
-<button href="disconnect.php" class="navbar-btn btn-info navbar-right btn">Disconnect</a>
+<button href="disconnect.php" class="navbar-btn btn-info navbar-right btn">Disconnect</button>
 
