--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Limelight);
+@import url(//fonts.googleapis.com/css?family=Limelight);
 #player .slider .ui-slider-range
 {
 	background: green;
