fixed some problems and upload for multiple files now works

--- a/css/krupskaya.css
+++ b/css/krupskaya.css
@@ -34,7 +34,7 @@
 #simplePlayer .btn
 {
 	top:100px;
-	left:0px;
+	left:10px;
 	position: fixed;
 }
 #complexPlayer .slider
@@ -60,4 +60,27 @@
 {
 	font-family: 'Limelight', cursive;
 	font-size: 25pt;
+}
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  background: red;
+  cursor: inherit;
+  display: block;
+}
+input[readonly] {
+  background-color: white !important;
+  cursor: text !important;
 }
