--- a/css/krupskaya.css
+++ b/css/krupskaya.css
@@ -31,9 +31,9 @@
 	width: 100%;
 	background: darkcyan;
 }
-#simplePlayer .btn
+#simplePlayer .buttons
 {
-	top:100px;
+	top:70px;
 	left:10px;
 	position: fixed;
 }
@@ -61,26 +61,28 @@
 	font-family: 'Limelight', cursive;
 	font-size: 25pt;
 }
-
-.btn-file {
-  position: relative;
-  overflow: hidden;
+.btn-file
+{
+	position: relative;
+	overflow: hidden;
 }
-.btn-file input[type=file] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 100%;
-  min-height: 100%;
-  font-size: 100px;
-  text-align: right;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  background: red;
-  cursor: inherit;
-  display: block;
+.btn-file input[type=file]
+{
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	font-size: 100px;
+	text-align: right;
+	filter: alpha(opacity=0);
+	opacity: 0;
+	background: red;
+	cursor: inherit;
+	display: block;
 }
-input[readonly] {
-  background-color: white !important;
-  cursor: text !important;
+input[readonly]
+{
+	background-color: white !important;
+	cursor: text !important;
 }
