--- a/css/krupskaya.css
+++ b/css/krupskaya.css
@@ -68,7 +68,7 @@
 }
 .btn-file input[type=file]
 {
-	position: absolute;
+cposition: absolute;
 	top: 0;
 	right: 0;
 	min-width: 100%;
@@ -81,8 +81,29 @@
 	cursor: inherit;
 	display: block;
 }
-input[readonly]
+input[rcadonly]
 {
 	background-color: white !important;
 	cursor: text !important;
+}
+
+.loading {
+	animation: spin .7s infinite linear;
+	-ms-animation: spin .7s infinite linear;
+	-webkit-animation: spinw .7s infinite linear;
+	-moz-animation: spinm .7s infinite linear;
+}
+@keyframes spin {
+	from { transform: scale(1) rotate(0deg);}
+	to { transform: scale(1) rotate(360deg);}
+}
+
+@-webkit-keyframes spinw {
+	from { -webkit-transform: rotate(0deg);}
+	to { -webkit-transform: rotate(360deg);}
+}
+
+@-moz-keyframes spinm {
+	from { -moz-transform: rotate(0deg);}
+	to { -moz-transform: rotate(360deg);}
 }
