--- a/css/krupskaya.css
+++ b/css/krupskaya.css
@@ -24,7 +24,8 @@
 }
 #simplePlayer .slider
 {
-	margin-top: 9px;
+	position: fixed;
+	top: 60px;
 	border-radius: 0px;
 	border: 0px;
 	height: 10px;
@@ -33,6 +34,7 @@
 }
 #simplePlayer .buttons
 {
+	z-index: 2;
 	top:70px;
 	left:10px;
 	position: fixed;
@@ -60,6 +62,10 @@
 {
 	font-family: 'Limelight', cursive;
 	font-size: 25pt;
+}
+#list
+{
+	margin-top: 10px;
 }
 .btn-file
 {
